--- a/index.html
+++ b/index.html
@@ -4,9 +4,65 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hotel Booking</title>
+	<title>Best Tour Plan Hotel Booking</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<header class="header">
+		<div class="container">
+			<div class="row header-top">
+				<a href="#" class="logo">
+					<img src="image/logo_horizontal.svg" alt="Logo: Best Tour Plan" class="logo__image">
+				</a>
+				<form action="" class="search">
+					<input type="text" class="search__input" placeholder="Search Location">
+					<button class="search__button">
+						<img src="image/search_icon.svg" alt="Icon: search" class="search__icon">
+					</button>
+				</form>
+				<div class="user">
+					<img src="image/user_avatar.jpg" alt="avatar: Natan" class="user__avatar">
+					<div class="user__name"></div>
+				</div>
+			</div>
+			<!-- .header-top -->
+			<div class="row header-menu">
+				<ul class="nav">
+					<li class="header-menu__item item-1"><a href="#" class="header-menu__link">All Deals</a></li>
+					<li class="header-menu__item item-2"><a href="#" class="header-menu__link">Hotels</a></li>
+					<li class="header-menu__item item-3"><a href="#" class="header-menu__link">Activities</a></li>
+					<li class="header-menu__item item-4"><a href="#" class="header-menu__link">Hotel Day Packages</a></li>
+					<li class="header-menu__item item-5"><a href="#" class="header-menu__link">Restaurants</a></li>
+					<li class="header-menu__item item-6"><a href="#" class="header-menu__link">Events</a></li>
+					<li class="header-menu__item item-7"><a href="#" class="header-menu__link">Rodrigues</a></li>
+				</ul>
+			</div>
+			<!-- .header-menu -->
+		</div>
+		<!-- /.container -->
+	</header>
+	<!-- /.header -->
+	<section class="main">
+		<div class="container">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- /.main -->	
+	<section class="company">
+		<div class="container">
+			<div class="row newsletter"></div>
+			<div class="row about-us"></div>
+			<div class="row other-activities"></div>
+		</div>
+	</section>
+	<!-- /.company -->
+	<footer class="footer">
+		<div class="container">
+			<div class="row information"></div>
+			<div class="row contact-details"></div>
+			<div class="row copyright"></div>
+		</div>
+	</footer>
+	<!-- /.footer -->
 </body>
 </html>
