--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
 			</div>
 			<!-- .header-top -->
 			<div class="row header-menu">
-				<ul class="nav">
-					<li class="header-menu__item item-1"><a href="#" class="header-menu__link">All Deals</a></li>
-					<li class="header-menu__item item-2"><a href="#" class="header-menu__link">Hotels</a></li>
-					<li class="header-menu__item item-3"><a href="#" class="header-menu__link">Activities</a></li>
-					<li class="header-menu__item item-4"><a href="#" class="header-menu__link">Hotel Day Packages</a></li>
-					<li class="header-menu__item item-5"><a href="#" class="header-menu__link">Restaurants</a></li>
-					<li class="header-menu__item item-6"><a href="#" class="header-menu__link">Events</a></li>
-					<li class="header-menu__item item-7"><a href="#" class="header-menu__link">Rodrigues</a></li>
-				</ul>
+				<nav class="nav">
+					<ul class="menu">
+						<li class="menu__item item-1"><a href="#" class="menu__link">All Deals</a></li>
+						<li class="menu__item item-2"><a href="#" class="menu__link">Hotels</a></li>
+						<li class="menu__item item-3"><a href="#" class="menu__link">Activities</a></li>
+						<li class="menu__item item-4"><a href="#" class="menu__link">Hotel Day Packages</a></li>
+						<li class="menu__item item-5"><a href="#" class="menu__link">Restaurants</a></li>
+						<li class="menu__item item-6"><a href="#" class="menu__link">Events</a></li>
+						<li class="menu__item item-7"><a href="#" class="menu__link">Rodrigues</a></li>
+					</ul>
+				</nav>
 			</div>
 			<!-- .header-menu -->
 		</div>
