--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="row header-menu">
 				<nav class="nav">
 					<ul class="menu">
-						<li class="menu__item item-1"><a href="#" class="menu__link">All Deals</a></li>
+						<li class="menu__item item-1 active"><a href="#" class="menu__link">All Deals</a></li>
 						<li class="menu__item item-2"><a href="#" class="menu__link">Hotels</a></li>
 						<li class="menu__item item-3"><a href="#" class="menu__link">Activities</a></li>
 						<li class="menu__item item-4"><a href="#" class="menu__link">Hotel Day Packages</a></li>
@@ -40,6 +40,15 @@
 				</nav>
 			</div>
 			<!-- .header-menu -->
+			<div class="row header-bottom">
+				<nav class="nav" aria-label="Page breadcrumb" >
+					<ol class="breadcrumb">
+						<li class="breadcrumb-item active" aria-current="page">Home&nbsp;/</li>
+						<li class="breadcrumb-item">&nbsp;Flash Offers&nbsp;/</li>
+						<li class="breadcrumb-item">&nbsp;Grand Hilton Hotel</li>
+					</ol>
+				</nav>
+			</div>
 		</div>
 		<!-- /.container -->
 	</header>
