--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 			<div class="row header-bottom">
 				<nav class="nav" aria-label="Page breadcrumb" >
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item active" aria-current="page">Home&nbsp;/</li>
-						<li class="breadcrumb-item">&nbsp;Flash Offers&nbsp;/</li>
-						<li class="breadcrumb-item">&nbsp;Grand Hilton Hotel</li>
+						<li class="breadcrumb__item active" aria-current="page">Home&nbsp;/</li>
+						<li class="breadcrumb__item">&nbsp;Flash Offers&nbsp;/</li>
+						<li class="breadcrumb__item">&nbsp;Grand Hilton Hotel</li>
 					</ol>
 				</nav>
 			</div>
