--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			</div>
 			<!-- .header-top -->
 			<div class="row header-menu">
-				<nav class="nav">
-					<ul class="menu">
+				<nav class="menu">
+					<ul class="menu__list">
 						<li class="menu__item item-1 active"><a href="#" class="menu__link">All Deals</a></li>
 						<li class="menu__item item-2"><a href="#" class="menu__link">Hotels</a></li>
 						<li class="menu__item item-3"><a href="#" class="menu__link">Activities</a></li>
@@ -41,8 +41,8 @@
 			</div>
 			<!-- .header-menu -->
 			<div class="row header-bottom">
-				<nav class="nav" aria-label="Page breadcrumb" >
-					<ol class="breadcrumb">
+				<nav class="breadcrumb" aria-label="Page breadcrumb" >
+					<ol class="breadcrumb__list">
 						<li class="breadcrumb__item active" aria-current="page">Home&nbsp;/</li>
 						<li class="breadcrumb__item">&nbsp;Flash Offers&nbsp;/</li>
 						<li class="breadcrumb__item">&nbsp;Grand Hilton Hotel</li>
