create styles files sass and css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					</button>
 				</form>
 				<div class="user">
-					<img src="image/user_avatar.jpg" alt="avatar: Natan" class="user__avatar">
+					<img src="image/user_avatar.jpg" alt="Avatar: Natan" class="user__avatar">
 					<div class="user__name"></div>
 				</div>
 			</div>
