Created settings, variables, header sass files, added normalize.scss file and included this files in style.sass file also added styles in header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Best Tour Plan Hotel Booking</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
+	rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,16 +18,16 @@
 				<a href="#" class="logo">
 					<img src="image/logo_horizontal.svg" alt="Logo: Best Tour Plan" class="logo__image">
 				</a>
-				<form action="" class="search">
+				<form action="" class="search header__search">
 					<input type="text" class="search__input" placeholder="Search Location">
 					<button class="search__button">
 						<img src="image/search_icon.svg" alt="Icon: search" class="search__icon">
 					</button>
 				</form>
-				<div class="user">
+				<a href="#" class="user">
 					<img src="image/user_avatar.jpg" alt="Avatar: Natan" class="user__avatar">
-					<div class="user__name"></div>
-				</div>
+					<span class="user__name">Natan</span>
+				</a>
 			</div>
 			<!-- .header-top -->
 			<div class="row header-menu">
