added styles, created _media.sass file and included in style.sass also added style in media sass file

--- a/index.html
+++ b/index.html
@@ -30,31 +30,35 @@
 				</a>
 			</div>
 			<!-- .header-top -->
+		</div>
+		<!-- /.container -->
 			<div class="row header-menu">
-				<nav class="menu">
-					<ul class="menu__list">
-						<li class="menu__item item-1 active"><a href="#" class="menu__link">All Deals</a></li>
-						<li class="menu__item item-2"><a href="#" class="menu__link">Hotels</a></li>
-						<li class="menu__item item-3"><a href="#" class="menu__link">Activities</a></li>
-						<li class="menu__item item-4"><a href="#" class="menu__link">Hotel Day Packages</a></li>
-						<li class="menu__item item-5"><a href="#" class="menu__link">Restaurants</a></li>
-						<li class="menu__item item-6"><a href="#" class="menu__link">Events</a></li>
-						<li class="menu__item item-7"><a href="#" class="menu__link">Rodrigues</a></li>
-					</ul>
-				</nav>
+				<div class="container">
+					<nav class="menu">
+						<ul class="menu__list">
+							<li class="menu__item item-1 active"><a href="#" class="menu__link">All Deals</a></li>
+							<li class="menu__item item-2"><a href="#" class="menu__link">Hotels</a></li>
+							<li class="menu__item item-3"><a href="#" class="menu__link">Activities</a></li>
+							<li class="menu__item item-4"><a href="#" class="menu__link">Hotel Day Packages</a></li>
+							<li class="menu__item item-5"><a href="#" class="menu__link">Restaurants</a></li>
+							<li class="menu__item item-6"><a href="#" class="menu__link">Events</a></li>
+							<li class="menu__item item-7"><a href="#" class="menu__link">Rodrigues</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 			<!-- .header-menu -->
 			<div class="row header-bottom">
-				<nav class="breadcrumb" aria-label="Page breadcrumb" >
-					<ol class="breadcrumb__list">
-						<li class="breadcrumb__item active" aria-current="page">Home&nbsp;/</li>
-						<li class="breadcrumb__item">&nbsp;Flash Offers&nbsp;/</li>
-						<li class="breadcrumb__item">&nbsp;Grand Hilton Hotel</li>
-					</ol>
-				</nav>
+				<div class="container">
+					<nav class="breadcrumb" aria-label="Page breadcrumb">
+						<ol class="breadcrumb__list">
+							<li class="breadcrumb__item active" aria-current="page"><a href="#" class="breadcrumb__link">Home&nbsp;/</a></li>
+							<li class="breadcrumb__item"><a href="#" class="breadcrumb__link">&nbsp;Flash Offers&nbsp;/</a></li>
+							<li class="breadcrumb__item"><a href="#" class="breadcrumb__link">&nbsp;Grand Hilton Hotel</a></li>
+						</ol>
+					</nav>
+				</div>
 			</div>
-		</div>
-		<!-- /.container -->
 	</header>
 	<!-- /.header -->
 	<section class="main">
@@ -75,7 +79,7 @@
 		<div class="container">
 			<div class="row information"></div>
 			<div class="row contact-details"></div>
-			<div class="row copyright"></div>
+			<div class="row disclaimer"></div>
 		</div>
 	</footer>
 	<!-- /.footer -->
