--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 					<img src="image/user_avatar.jpg" alt="Avatar: Natan" class="user__avatar">
 					<span class="user__name">Natan</span>
 				</a>
+				<button class="hamburger">
+					<span class="hamburger__line"></span>
+					<span class="hamburger__line"></span>
+					<span class="hamburger__line"></span>
+				</button>
 			</div>
 			<!-- .header-top -->
 		</div>
