created _breadcrumb.sass file, included in style.sass and added styles for breadcrumb

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
 				</div>
 			</div>
 			<!-- .header-menu -->
-			<div class="row header-bottom">
-				<div class="container">
-					<nav class="breadcrumb" aria-label="Page breadcrumb">
-						<ol class="breadcrumb__list">
-							<li class="breadcrumb__item active" aria-current="page"><a href="#" class="breadcrumb__link">Home&nbsp;/</a></li>
-							<li class="breadcrumb__item"><a href="#" class="breadcrumb__link">&nbsp;Flash Offers&nbsp;/</a></li>
-							<li class="breadcrumb__item"><a href="#" class="breadcrumb__link">&nbsp;Grand Hilton Hotel</a></li>
-						</ol>
-					</nav>
-				</div>
+		</header>
+		<section class="breadcrumb">
+			<div class="container">
+				<nav class="breadcrumb-nav" aria-label="Page breadcrumb">
+					<ol class="breadcrumb-nav__list">
+						<li class="breadcrumb-nav__item active" aria-current="page"><a href="#" class="breadcrumb-nav__link">Home</a></li>
+						<li class="breadcrumb-nav__item"><a href="#" class="breadcrumb-nav__link">Flash Offers</a></li>
+						<li class="breadcrumb-nav__item">Grand Hilton Hotel</li>
+					</ol>
+				</nav>
 			</div>
-	</header>
+		</section>
 	<!-- /.header -->
 	<section class="main">
 		<div class="container">
