added block for slider, quick booking and map also writed styles for this and media queries

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="#" class="logo">
 					<img src="image/logo_horizontal.svg" alt="Logo: Best Tour Plan" class="logo__image">
 				</a>
-				<form action="" class="search header__search">
+				<form action="#" class="search header__search">
 					<input type="text" class="search__input" placeholder="Search Location">
 					<button class="search__button">
 						<img src="image/search_icon.svg" alt="Icon: search" class="search__icon">
@@ -98,13 +98,55 @@
 							<div class="swiper-wrapper">
 								<!-- Slides -->
 								<div class="swiper-slide">
-									<img src="image/hotel-imag-1.jpg" alt="Pansionat" class="slider-image">
+									<img src="image/hotel-image-1.jpg" alt="Pansionat" class="slider-image">
 								</div>
 								<div class="swiper-slide">
-									<img src="image/hotel-imag-1.jpg" alt="Pansionat" class="slider-image">
+									<img src="image/hotel-image-2.jpg" alt="Pansionat" class="slider-image">
 								</div>
 								<div class="swiper-slide">
-									<img src="image/hotel-imag-1.jpg" alt="Pansionat" class="slider-image">
+									<img src="image/hotel-image-3.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-4.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-5.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-6.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-7.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-8.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-9.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-10.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-11.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-12.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-13.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-14.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-15.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-5.jpg" alt="Pansionat" class="slider-image">
+								</div>
+								<div class="swiper-slide">
+									<img src="image/hotel-image-16.jpg" alt="Pansionat" class="slider-image">
 								</div>
 							</div>
 							<!-- If we need navigation buttons -->
@@ -116,23 +158,32 @@
 				</div>
 				<div class="hotel-info__bottom-right">
 					<div class="hotel__quick-booking">
-						<div class="price-booking">
-							<span class="price-as">price starts as</span>
-							<span class="price">$ 8,500</span>
-							<span class="per">per room / night</span>
-						</div>
-						<div class="guests-room">
-							<span class="guests"><img src="image/guests.svg" alt="Guests">2 x Guests</span>
-							<span class="room"><img src="image/home.svg" alt="Room">1 x Room</span>
+						<div class="price-room">
+							<div class="price-booking">
+								<span class="price-as">price starts as</span>
+								<span class="price">$ 8,500</span>
+								<span class="per">per room / night</span>
+							</div>
+							<div class="guests-room">
+								<div class="guests"><img src="image/guests.svg" alt="Guests"><span>2 x Guests</span></div>
+								<div class="room"><img src="image/home.svg" alt="Room"><span>1 x Room</span></div>
+							</div>
 						</div>
 						<div class="quick-booking">
 							<span class="text">Quick Booking</span>
-							<span class="phone"><img src="image/phone-call.svg" alt="Phone">12100</span>
+							<a href="tel:12100" class="phone"><img src="image/phone-call.svg" alt="Phone"><span>12100</span></a>
 						</div>
 						<a href="#" class="button">View Other Options</a>
 					</div>
 					<div class="hotel__map">
-						<img src="image/map.jpg" alt="Hotel In Map">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1976.0219777474576!2d98.2934486730029!3d7.890470472082296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30503b7bfcd9f903%3A0xf7065fac1e3d7c48!2sDoubleTree%20by%20Hilton%20Phuket%20Banthai%20Resort!5e0!3m2!1sru!2s!4v1638800565148!5m2!1sru!2s"
+							width="347" 
+							height="213" 
+							style="border:0;" 
+							allowfullscreen="" 
+							loading="lazy">
+						</iframe>
 					</div>
 				</div>
 			</div>
