created blocks newsletter and about-us also created _newsletter.sass and _about-us.sass, added styles and media style for them

--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
 				</div>
 			</div>
 			<div class="row hotel-info__bottom">
-				<div class="hotel-info__bottom-left">
-					<div class="hotel__slider">
-						<!-- Slider main container -->
-						<div class="swiper">
+				<div class="hotel-info__bottom-left">					
+						<!-- Slide main container -->
+						<div class="swiper hotel__slider">
 							<!-- Additional required wrapper -->
 							<div class="swiper-wrapper">
 								<!-- Slides -->
@@ -153,8 +152,7 @@
 							<button class="swiper-button swiper-button--prev"></button>
 							<button class="swiper-button swiper-button--next"></button>
 						</div>
-						<!-- |.swiper -->						
-					</div>
+						<!-- |.swiper -->
 				</div>
 				<div class="hotel-info__bottom-right">
 					<div class="hotel__quick-booking">
@@ -190,13 +188,79 @@
 		</div>
 	</section>
 	<!-- /.main -->	
-	<section class="company">
+	<section class="newsletter">
+		<!--<img src="image/newsletter.jpg" alt="Newletter Background Image" class="newsletter__bg-image">-->
 		<div class="container">
-			<div class="row newsletter"></div>
-			<div class="row about-us"></div>
-			<div class="row other-activities"></div>
+			<div class="newsletter__text">
+				<span class="newsletter__text-subscribe">subscribe to our</span>
+				<h2 class="newsletter__text-title">Newsletter</h2>
+			</div>
+			<div class="newsletter__form">
+				<form action="#" class="subscribe newsletter__form-subscribe">
+					<input type="text" class="newsletter__form-subscribe-input" placeholder="Your email address">
+					<button class="newsletter__form-subscribe-button">
+						<span class="newsletter__form-subscribe-text">Send</span>
+					</button>
+				</form>
+			</div>
 		</div>
 	</section>
+	<section class="about-us">
+		<div class="container">
+		<h2 class="about-us__title">What people think about us</h2>
+		<div class="swiper about-us__slider">
+			<!-- Additional required wrapper -->
+			<div class="swiper-wrapper">
+				<!-- Slides -->
+				<div class="swiper-slide about-us__slide">
+					<img src="image/guest-photo.jpg" alt="Guest photo" class="about-us__slide-image">
+					<span class="about-us__slide-name">Megan Fox</span>
+					<span class="about-us__slide-stayed-date">Stayed 18 Nov, 2019</span>
+					<div class="about-us__slide-rating">
+						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
+						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
+						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
+						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
+						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
+					</div>
+					<p class="about-us__slide-text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.</p>
+				</div>
+				<div class="swiper-slide about-us__slide">
+					<img src="image/guest-photo.jpg" alt="Guest photo" class="about-us__slide-image">
+					<span class="about-us__slide-name">Megan Fox</span>
+					<span class="about-us__slide-stayed-date">Stayed 18 Nov, 2019</span>
+					<div class="about-us__slide-stars">
+						<img src="image/star.svg" alt="Hotel Star">
+						<img src="image/star.svg" alt="Hotel Star">
+						<img src="image/star.svg" alt="Hotel Star">
+						<img src="image/star.svg" alt="Hotel Star">
+						<img src="image/star.svg" alt="Hotel Star">
+					</div>
+					<p class="about-us__slide-text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.</p>
+				</div>
+				<div class="swiper-slide about-us__slide">
+					<img src="image/guest-photo.jpg" alt="Guest photo" class="about-us__slide-image">
+					<span class="about-us__slide-name">Megan Fox</span>
+					<span class="about-us__slide-stayed-date">Stayed 18 Nov, 2019</span>
+					<div class="about-us__slide-stars">
+						<img src="image/star.svg" alt="Hotel Star">
+						<img src="image/star.svg" alt="Hotel Star">
+						<img src="image/star.svg" alt="Hotel Star">
+						<img src="image/star.svg" alt="Hotel Star">
+						<img src="image/star.svg" alt="Hotel Star">
+					</div>
+					<p class="about-us__slide-text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.</p>
+				</div>
+			</div>
+			<!-- If we need navigation buttons -->
+			<button class="swiper-button swiper-button--prev"></button>
+			<button class="swiper-button swiper-button--next"></button>
+		</div>
+		<!-- |.swiper -->
+		</div>
+	</section>
+	<!-- /.about-us -->
+	<section class="other-activities"></section>
 	<!-- /.company -->
 	<footer class="footer">
 		<div class="container">
