--- a/index.html
+++ b/index.html
@@ -188,75 +188,89 @@
 		</div>
 	</section>
 	<!-- /.main -->	
-	<section class="newsletter">
-		<!--<img src="image/newsletter.jpg" alt="Newletter Background Image" class="newsletter__bg-image">-->
+	<section class="newsletter">		
 		<div class="container">
 			<div class="newsletter__text">
 				<span class="newsletter__text-subscribe">subscribe to our</span>
 				<h2 class="newsletter__text-title">Newsletter</h2>
 			</div>
-			<div class="newsletter__form">
-				<form action="#" class="subscribe newsletter__form-subscribe">
-					<input type="text" class="newsletter__form-subscribe-input" placeholder="Your email address">
-					<button class="newsletter__form-subscribe-button">
-						<span class="newsletter__form-subscribe-text">Send</span>
-					</button>
+				<form action="#" class="subscribe newsletter__subscribe">
+					<input type="text" class="subscribe__input" placeholder="Your email address">
+					<button class="subscribe__button">Send</button>
 				</form>
-			</div>
 		</div>
 	</section>
-	<section class="about-us">
+	<section class="reviews">
 		<div class="container">
-		<h2 class="about-us__title">What people think about us</h2>
-		<div class="swiper about-us__slider">
+		<h2 class="reviews-title">What people think about us</h2>
+		<div class="swiper reviews-slider">
 			<!-- Additional required wrapper -->
 			<div class="swiper-wrapper">
 				<!-- Slides -->
-				<div class="swiper-slide about-us__slide">
-					<img src="image/guest-photo.jpg" alt="Guest photo" class="about-us__slide-image">
-					<span class="about-us__slide-name">Megan Fox</span>
-					<span class="about-us__slide-stayed-date">Stayed 18 Nov, 2019</span>
-					<div class="about-us__slide-rating">
-						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
-						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
-						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
-						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
-						<img src="image/star.svg" alt="Guest rating" class="about-us__slide-rating-star">
+				<div class="swiper-slide">
+					<div class="reviews-slider__item">
+						<div class="reviews-slider__profile">
+							<img src="image/guest-photo-1.jpg" alt="Megan Fox" class="reviews-slider__avatar">
+							<h3 class="reviews-slider__name">Megan Fox</h3>
+							<span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+							<div class="reviews-slider__rating">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+							</div>
+						</div>
+						<p class="reviews-slider__text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They
+							welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities
+							articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also
+							very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a
+							narrow street is not good. Overall it was a good experience and could recommend.</p>
 					</div>
-					<p class="about-us__slide-text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.</p>
-				</div>
-				<div class="swiper-slide about-us__slide">
-					<img src="image/guest-photo.jpg" alt="Guest photo" class="about-us__slide-image">
-					<span class="about-us__slide-name">Megan Fox</span>
-					<span class="about-us__slide-stayed-date">Stayed 18 Nov, 2019</span>
-					<div class="about-us__slide-stars">
-						<img src="image/star.svg" alt="Hotel Star">
-						<img src="image/star.svg" alt="Hotel Star">
-						<img src="image/star.svg" alt="Hotel Star">
-						<img src="image/star.svg" alt="Hotel Star">
-						<img src="image/star.svg" alt="Hotel Star">
+					<!-- slider-item -->
+				</div>				
+				<div class="swiper-slide">
+					<div class="reviews-slider__item">
+						<div class="reviews-slider__profile">
+							<img src="image/guest-photo-3.jpg" alt="Maria Alexis" class="reviews-slider__avatar">
+							<h3 class="reviews-slider__name">Maria Alexis</h3>
+							<span class="reviews-slider__date">Stayed 3 May, 2020</span>
+							<div class="reviews-slider__rating">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+							</div>
+						</div>
+						<p class="reviews-slider__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique illum optio voluptates quibusdam consectetur expedita asperiores accusantium commodi doloremque excepturi doloribus odit consequatur, error quia atque consequuntur totam? Nihil natus repellat deleniti qui similique aperiam iusto facere consequuntur corporis dolorem. Veritatis porro repellat quo quae, molestiae cumque tempore culpa numquam similique autem natus suscipit adipisci necessitatibus fuga delectus ad earum dicta placeat quasi inventore provident maiores ipsum deserunt. Facilis ipsa hic eum consectetur repellendus ab, id tenetur in soluta nulla.</p>
 					</div>
-					<p class="about-us__slide-text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.</p>
-				</div>
-				<div class="swiper-slide about-us__slide">
-					<img src="image/guest-photo.jpg" alt="Guest photo" class="about-us__slide-image">
-					<span class="about-us__slide-name">Megan Fox</span>
-					<span class="about-us__slide-stayed-date">Stayed 18 Nov, 2019</span>
-					<div class="about-us__slide-stars">
-						<img src="image/star.svg" alt="Hotel Star">
-						<img src="image/star.svg" alt="Hotel Star">
-						<img src="image/star.svg" alt="Hotel Star">
-						<img src="image/star.svg" alt="Hotel Star">
-						<img src="image/star.svg" alt="Hotel Star">
+					<!-- slider-item -->
+				</div>				
+				<div class="swiper-slide">
+					<div class="reviews-slider__item">
+						<div class="reviews-slider__profile">
+							<img src="image/guest-photo-2.jpg" alt="Thomas Frost" class="reviews-slider__avatar">
+							<h3 class="reviews-slider__name">Thomas Frost</h3>
+							<span class="reviews-slider__date">Stayed 1 Aug, 2020</span>
+							<div class="reviews-slider__rating">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+								<img src="image/star.svg" alt="Guest rating" class="reviews-slider__rating-star">
+							</div>
+						</div>
+						<p class="reviews-slider__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, vero sit, laborum accusantium nihil unde qui voluptates quos incidunt quibusdam magni modi commodi labore esse vel ea, expedita veniam consequatur? Perspiciatis est facilis eos esse corporis dolorem quos. Repellat enim iure similique. Quis officia, recusandae beatae distinctio sint obcaecati quibusdam. Adipisci eum facere tenetur, esse architecto aliquam maiores porro quod sapiente doloremque mollitia officia incidunt et dolor ut facilis consectetur tempore fugit! Dolores enim exercitationem placeat amet ipsam necessitatibus ut culpa voluptates dolor ullam architecto aspernatur modi est repellendus tenetur nihil veniam inventore commodi natus incidunt nemo, voluptatem hic magnam.</p>
 					</div>
-					<p class="about-us__slide-text">It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it was a good experience and could recommend.</p>
-				</div>
+					<!-- slider-item -->
+				</div>				
 			</div>
-			<!-- If we need navigation buttons -->
-			<button class="swiper-button swiper-button--prev"></button>
-			<button class="swiper-button swiper-button--next"></button>
+			<!-- swiper-wrapper -->
+			<button class="reviews-slider__button reviews-slider__button--prev"></button>
+			<button class="reviews-slider__button reviews-slider__button--next"></button>
 		</div>
-		<!-- |.swiper -->
+		<!-- |.swiper.about-us__slider -->
 		</div>
 	</section>
 	<!-- /.about-us -->
@@ -271,6 +285,7 @@
 	</footer>
 	<!-- /.footer -->
 	<script src="js/swiper-bundle.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
