created block "activities", file _activities.sass, included in style.sass & added styles also writed media queries

--- a/index.html
+++ b/index.html
@@ -273,9 +273,35 @@
 		<!-- |.swiper.about-us__slider -->
 		</div>
 	</section>
-	<!-- /.about-us -->
-	<section class="other-activities"></section>
-	<!-- /.company -->
+	<!-- /.reviews -->
+	<section class="activities">
+		<div class="container">
+			<h3 class="activities-title">Other Activities</h3>
+			<div class="activities-blocks">
+				<div class="activities-blocks__type">
+					<img src="image/activities-1.jpg" alt="The curious corner of chamarel" class="activities-blocks__image">
+					<span class="activities-blocks__title">The curious corner of chamarel</span>
+					<a href="#" class="activities-blocks__button">Book now</a>
+				</div>
+				<div class="activities-blocks__type">
+					<img src="image/activities-2.jpg" alt="Gymkhana club golf course" class="activities-blocks__image">
+					<span class="activities-blocks__title">Gymkhana club golf course</span>
+					<a href="#" class="activities-blocks__button">Book now</a>
+				</div>
+				<div class="activities-blocks__type">
+					<img src="image/activities-3.jpg" alt="Tamarind falls hiking trip - full day" class="activities-blocks__image">
+					<span class="activities-blocks__title">Tamarind falls hiking trip - full day</span>
+					<a href="#" class="activities-blocks__button">Book now</a>
+				</div>
+				<div class="activities-blocks__type">
+					<img src="image/activities-4.jpg" alt="The blue marine discovery quest" class="activities-blocks__image">
+					<span class="activities-blocks__title">The blue marine discovery quest</span>
+					<a href="#" class="activities-blocks__button">Book now</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- /.activities -->
 	<footer class="footer">
 		<div class="container">
 			<div class="row information"></div>
