--- a/index.html
+++ b/index.html
@@ -187,7 +187,166 @@
 			</div>
 		</div>
 	</section>
-	<!-- /.main -->	
+	<!-- /.hotel -->
+	<section class="packages">
+		<div class="container">
+			<h2 class="packages-title">Other packages</h2>
+			<div class="packages-varieties">
+				<div class="packages-varieties__offer">
+					<img src="image/Hotel-Blue-Haven.jpg" alt="Hotel Blue Haven" class="packages-varieties__image">
+					<div class="packages-varieties__info">
+						<div class="packages-varieties__rating">
+							<img src="image/star.svg" alt="Guest rating" class="packages-varieties__rating-star">
+							<img src="image/star.svg" alt="Guest rating" class="packages-varieties__rating-star">
+							<img src="image/star.svg" alt="Guest rating" class="packages-varieties__rating-star">
+							<img src="image/star.svg" alt="Guest rating" class="packages-varieties__rating-star">
+							<img src="image/star.svg" alt="Guest rating" class="packages-varieties__rating-star">
+						</div>
+						<h3 class="packages-varieties__title">Hotel Blue Haven</h3>
+						<p class="packages-varieties__text">
+							Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim laborum magna llit. Ipsum est fugiat velit ea
+							llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur enim
+							laborum magna mollit. Ipsum est fugiat velit ea ullamco do
+						</p>
+						<div class="packages-varieties__services">
+							<div class="packages-varieties__services-address">
+								<img src="image/map-pin.svg" alt="Mark address" class="packages-varieties__services-mark">
+								<span class="packages-varieties__services-text">1749 Wheeler Ridge Delaware</span>
+							</div>
+							<div class="packages-varieties__services-guest">
+								<img src="image/packages-user.svg" alt="Guest user" class="packages-varieties__services-user">
+								<span class="packages-varieties__services-text">2 x Guests</span>
+							</div>
+							<div class="packages-varieties__services-room">
+								<img src="image/packages-home.svg" alt="room" class="packages-varieties__services-home">
+								<span class="packages-varieties__services-text">1 x Room</span>
+							</div>
+						</div>
+						<!-- /.packages-varieties__services -->
+						<div class="packages-varieties__prices">
+							<span class="packages-varieties__prices-old-price">$ 10,500</span>
+							<span class="packages-varieties__prices-new-price">$ 8,500</span>
+						</div>
+						<a href="#" class="packages-varieties__button">Book Now</a>
+					</div><!-- /.packages-varieties__info -->
+				</div>
+				<!-- /.packages-varieties__offer -->
+				<div class="packages-varieties__offer">
+					<img src="image/LUX-Belle-Mare.jpg" alt="LUX* Belle Mare" class="packages-varieties__image">
+					<div class="packages-varieties__info">
+						<h3 class="packages-varieties__title">LUX* Belle Mare</h3>
+						<div class="packages-varieties__services">
+							<div class="packages-varieties__services-address">
+								<img src="image/map-pin.svg" alt="Mark address" class="packages-varieties__services-mark">
+								<span class="packages-varieties__services-text">1749 Wheeler Ridge Delaware</span>
+							</div>
+							<div class="packages-varieties__services-guest">
+								<img src="image/packages-user.svg" alt="Guest user" class="packages-varieties__services-user">
+								<span class="packages-varieties__services-text">2 x Guests</span>
+							</div>
+							<div class="packages-varieties__services-room">
+								<img src="image/packages-home.svg" alt="room" class="packages-varieties__services-home">
+								<span class="packages-varieties__services-text">1 x Room</span>
+							</div>
+						</div>
+						<!-- /.packages-varieties__services -->
+						<div class="packages-varieties__prices">
+							<span class="packages-varieties__prices-old-price">$ 8,500</span>
+							<span class="packages-varieties__prices-new-price">$ 3,000</span>
+						</div>
+						<a href="#" class="packages-varieties__button">Book Now</a>
+					</div>
+					<!-- /.packages-varieties__info -->
+				</div>
+				<!-- /.packages-varieties__offer -->
+				<div class="packages-varieties__offer">
+					<img src="image/White-Palace.jpg" alt="White Palace" class="packages-varieties__image">
+					<h3 class="packages-varieties__title">White Palace</h3>
+					<div class="packages-varieties__info">
+						<div class="packages-varieties__services">
+							<div class="packages-varieties__services-address">
+								<img src="image/map-pin.svg" alt="Mark address" class="packages-varieties__services-mark">
+								<span class="packages-varieties__services-text">1749 Wheeler Ridge Delaware</span>
+							</div>
+							<div class="packages-varieties__services-guest">
+								<img src="image/packages-user.svg" alt="Guest user" class="packages-varieties__services-user">
+								<span class="packages-varieties__services-text">2 x Guests</span>
+							</div>
+							<div class="packages-varieties__services-room">
+								<img src="image/packages-home.svg" alt="room" class="packages-varieties__services-home">
+								<span class="packages-varieties__services-text">1 x Room</span>
+							</div>
+						</div>
+						<!-- /.packages-varieties__services -->
+						<div class="packages-varieties__prices">
+							<span class="packages-varieties__prices-old-price">$ 10,500</span>
+							<span class="packages-varieties__prices-new-price">$ 9,500</span>
+						</div>
+						<a href="#" class="packages-varieties__button">Book Now</a>
+					</div>
+					<!-- /.packages-varieties__info -->
+				</div>
+				<!-- /.packages-varieties__offer -->
+				<div class="packages-varieties__offer">
+					<img src="image/Luxury-Place.jpg" alt="Luxury Place" class="packages-varieties__image">
+					<div class="packages-varieties__info">
+						<h3 class="packages-varieties__title">Luxury Place</h3>
+						<div class="packages-varieties__services">
+							<div class="packages-varieties__services-address">
+								<img src="image/map-pin.svg" alt="Mark address" class="packages-varieties__services-mark">
+								<span class="packages-varieties__services-text">1749 Wheeler Ridge Delaware</span>
+							</div>
+							<div class="packages-varieties__services-guest">
+								<img src="image/packages-user.svg" alt="Guest user" class="packages-varieties__services-user">
+								<span class="packages-varieties__services-text">2 x Guests</span>
+							</div>
+							<div class="packages-varieties__services-room">
+								<img src="image/packages-home.svg" alt="room" class="packages-varieties__services-home">
+								<span class="packages-varieties__services-text">1 x Room</span>
+							</div>
+						</div>
+						<!-- /.packages-varieties__services -->
+						<div class="packages-varieties__prices">
+							<span class="packages-varieties__prices-old-price">$ 4,500</span>
+							<span class="packages-varieties__prices-new-price">$ 2,500</span>
+						</div>
+						<a href="#" class="packages-varieties__button">Book Now</a>
+					</div>
+					<!-- /.packages-varieties__info -->
+				</div>
+				<!-- /.packages-varieties__offer -->
+				<div class="packages-varieties__offer">
+					<img src="image/Hotel-Five-Star.jpg" alt="Hotel Five Star" class="packages-varieties__image">
+					<div class="packages-varieties__info">
+						<h3 class="packages-varieties__title">Hotel Five Star</h3>
+						<div class="packages-varieties__services">
+							<div class="packages-varieties__services-address">
+								<img src="image/map-pin.svg" alt="Mark address" class="packages-varieties__services-mark">
+								<span class="packages-varieties__services-text">1749 Wheeler Ridge Delaware</span>
+							</div>
+							<div class="packages-varieties__services-guest">
+								<img src="image/packages-user.svg" alt="Guest user" class="packages-varieties__services-user">
+								<span class="packages-varieties__services-text">2 x Guests</span>
+							</div>
+							<div class="packages-varieties__services-room">
+								<img src="image/packages-home.svg" alt="room" class="packages-varieties__services-home">
+								<span class="packages-varieties__services-text">1 x Room</span>
+							</div>
+						</div>
+						<!-- /.packages-varieties__services -->
+						<div class="packages-varieties__prices">
+							<span class="packages-varieties__prices-old-price">$ 6,500</span>
+							<span class="packages-varieties__prices-new-price">$ 3,500</span>
+						</div>
+						<a href="#" class="packages-varieties__button">Book Now</a>
+					</div>
+					<!-- /.packages-varieties__info -->
+				</div>
+				<!-- /.packages-varieties__offer -->
+			</div>
+		</div>
+	</section>
+	<!-- /.packages -->
 	<section class="newsletter">		
 		<div class="container">
 			<div class="newsletter__text">
