added span flash offer in block packages

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 			<h2 class="packages-title">Other packages</h2>
 			<div class="packages-varieties">
 				<div class="packages-varieties__offer-first">
+					<span class="packages-varieties__offer-first-flash">Flash offer</span>
 					<img src="image/Hotel-Blue-Haven.jpg" alt="Hotel Blue Haven" class="packages-varieties__offer-first-image">
 					<div class="packages-varieties__offer-first-info">
 						<div class="packages-varieties__rating">
@@ -232,6 +233,7 @@
 				</div>
 				<!-- /.packages-varieties__offer -->
 				<div class="packages-varieties__offer">
+					<span class="packages-varieties__flash">Flash offer</span>
 					<img src="image/LUX-Belle-Mare.jpg" alt="LUX* Belle Mare" class="packages-varieties__image">
 					<div class="packages-varieties__info">
 						<h3 class="packages-varieties__title">LUX* Belle Mare</h3>
@@ -260,6 +262,7 @@
 				</div>
 				<!-- /.packages-varieties__offer -->
 				<div class="packages-varieties__offer">
+					<span class="packages-varieties__flash">Flash offer</span>
 					<img src="image/White-Palace.jpg" alt="White Palace" class="packages-varieties__image">
 					<div class="packages-varieties__info">
 						<h3 class="packages-varieties__title">White Palace</h3>
@@ -288,6 +291,7 @@
 				</div>
 				<!-- /.packages-varieties__offer -->
 				<div class="packages-varieties__offer">
+					<span class="packages-varieties__flash">Flash offer</span>
 					<img src="image/Luxury-Place.jpg" alt="Luxury Place" class="packages-varieties__image">
 					<div class="packages-varieties__info">
 						<h3 class="packages-varieties__title">Luxury Place</h3>
@@ -316,6 +320,7 @@
 				</div>
 				<!-- /.packages-varieties__offer -->
 				<div class="packages-varieties__offer">
+					<span class="packages-varieties__flash">Flash offer</span>
 					<img src="image/Hotel-Five-Star.jpg" alt="Hotel Five Star" class="packages-varieties__image">
 					<div class="packages-varieties__info">
 						<h3 class="packages-varieties__title">Hotel Five Star</h3>
