created mobile menu, writed styles & script for him

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 				<a href="#" class="logo">
 					<img src="image/logo_horizontal.svg" alt="Logo: Best Tour Plan" class="logo__image">
 				</a>
-				<form action="#" class="search header__search">
+				<form action="#" class="search header__search search__mobile--hidden">
 					<input type="text" class="search__input" placeholder="Search Location">
 					<button class="search__button">
 						<img src="image/search_icon.svg" alt="Icon: search" class="search__icon">
 					</button>
 				</form>
-				<a href="#" class="user">
+				<a href="#" class="user user__mobile--hidden">
 					<img src="image/user_avatar.jpg" alt="Avatar: Natan" class="user__avatar">
 					<span class="user__name">Natan</span>
 				</a>
@@ -38,7 +38,7 @@
 			<!-- .header-top -->
 		</div>
 		<!-- /.container -->
-			<div class="header-menu">
+			<div class="header-menu header-menu__mobile--hidden">
 				<div class="container">
 					<nav class="menu">
 						<ul class="menu__list">
@@ -54,6 +54,32 @@
 				</div>
 			</div>
 			<!-- .header-menu -->
+			<div class="header-menu menu-mobile--hidden">
+				<div class="container">
+					<nav class="menu">
+						<a href="#" class="user">
+							<img src="image/user_avatar.jpg" alt="Avatar: Natan" class="user__avatar">
+							<span class="user__name">Natan</span>
+						</a>
+						<form action="#" class="search header__search">
+							<input type="text" class="search__input" placeholder="Search Location">
+							<button class="search__button">
+								<img src="image/search_icon.svg" alt="Icon: search" class="search__icon">
+							</button>
+						</form>
+						<ul class="menu__list">
+							<li class="menu__item item-1 active"><a href="#" class="menu__link">All Deals</a></li>
+							<li class="menu__item item-2"><a href="#" class="menu__link">Hotels</a></li>
+							<li class="menu__item item-3"><a href="#" class="menu__link">Activities</a></li>
+							<li class="menu__item item-4"><a href="#" class="menu__link">Hotel Day Packages</a></li>
+							<li class="menu__item item-5"><a href="#" class="menu__link">Restaurants</a></li>
+							<li class="menu__item item-6"><a href="#" class="menu__link">Events</a></li>
+							<li class="menu__item item-7"><a href="#" class="menu__link">Rodrigues</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+			<!-- .header-menu--mobile -->
 		</header>
 		<section class="breadcrumb">
 			<h2 class="breadcrumb__title">Breadcrumb</h2>
