--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 					<span class="user__name">Natan</span>
 				</a>
 				<button class="hamburger">
-					<span class="hamburger__line"></span>
-					<span class="hamburger__line"></span>
-					<span class="hamburger__line"></span>
+					<span class="hamburger__line hamburger__line-top"></span>
+					<span class="hamburger__line hamburger__line-middle"></span>
+					<span class="hamburger__line hamburger__line-bottom"></span>
 				</button>
 			</div>
 			<!-- .header-top -->
